<resources>
    <string name="app_name">葫芦娃</string>
    <string name="limitbuy">限时抢购</string>
    <string name="back">返回</string>
    <string name="productionName">商品名</string>
    <string name="prime_cost">原价 :</string>
    <string name="limitprice">限时特价 :</string>
    <string name="buynow">立即抢购</string>
    <string name="topictext">“酷”宝贝 宝贝“裤” 2012.01.02 - 2012.01.15</string>
    <string name="topic">促销快报</string>
    <string name="salev">销量</string>
    <string name="price">价格</string>
    <string name="favour">好评度</string>
    <string name="shelftime">上架时间</string>
    <string name="buy">购买</string>
    <string name="aldcomments">已有20个评论</string>
    <string name="productdetail">商品详情</string>
    <string name="add2cart">添加到购物车</string>
    <string name="productName">灰色孕妇装</string>
    <string name="mprice">市场价 :</string>
    <string name="nowprice">现价 :</string>
    <string name="productnum">数量 :</string>
    <string name="collect">收藏</string>
    <string name="inventory">查看库存 :</string>
    <string name="salerange">全国</string>
    <string name="usercomment">用户评论 ;</string>
    <string name="commentnum">已有5条评论</string>
    <string name="selectaddress">请选择地址</string>
    <string name="paypattern">请选择支付方式</string>
    <string name="finish">完成</string>
    <string name="deliverpattern">请选择支付方式</string>
    <string name="billnote">发票信息</string>
    <string name="billnotetype">发票类型 :</string>
    <string name="elecbill">不需要发票</string>
    <string name="paperbill">个人发票</string>
    <string name="billheadtitle">发票抬头 :</string>
    <string name="billcontent">发票内容 :</string>
    <string name="commit">提交</string>
    <string name="unitbill">公司发票</string>
    <string name="title_activity_test2">Test2Activity</string>
</resources>
