<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/bill_note_toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/md_teal_300_color_code"/>
    <!--<TextView-->
    <!--style="@style/common_title"-->
    <!--android:text="@string/billnote"/>-->

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billnotetype"
            android:textColor="#000"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_nonbill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/elecbill"/>

            <RadioButton
                android:id="@+id/rb_personbill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/paperbill"/>

            <RadioButton
                android:id="@+id/rb_unitbill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unitbill"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/md_blue_300_color_code"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="3dp"
            android:elevation="5dp"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:paddingLeft="13dp"
                android:layout_gravity="center"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/aaa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/billheadtitle"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_billhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/aaa"
                    android:layout_toEndOf="@+id/aaa"
                    android:background="#fff"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="请输入发票抬头"/>


                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@+id/et_billhead"
                    android:layout_marginTop="10dp"
                    android:background="@color/md_blue_300_color_code"/>

                <TextView
                    android:id="@+id/bbb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/view"
                    android:paddingTop="10dp"
                    android:text="@string/billcontent"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_billcontent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/bbb"
                    android:layout_toEndOf="@+id/bbb"
                    android:background="#fff"
                    android:hint="请输入发票内容"/>
            </RelativeLayout>

        </android.support.v7.widget.CardView>
        <Button
            android:id="@+id/bt_billcommit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:background="@drawable/rectangle_orange"
            android:text="@string/commit"
            android:textColor="#fff"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>
