<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/segment_bg"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/product_toolbar"
        android:layout_height="90dp"
        android:background="@color/md_teal_300_color_code"
        app:title="新品上市"
        app:titleTextColor="@color/md_white_color_code">

    </android.support.v7.widget.Toolbar>
    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<TextView-->
    <!--android:id="@+id/tv_item_newproduct_title"-->
    <!--style="@style/common_title"-->
    <!--android:text="新品上市"/>-->

    <!--<Button-->
    <!--android:id="@+id/btn_back"-->
    <!--android:layout_width="72dp"-->
    <!--android:layout_height="36dp"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:background="@drawable/bar_head_back_bg"-->
    <!--android:gravity="center"-->
    <!--android:paddingLeft="10dp"-->
    <!--android:text="@string/back"-->
    <!--android:textColor="#fff"-->
    <!--android:textSize="18sp"/>-->
    <!--</RelativeLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="15dp"
    >

        <TextView
            android:id="@+id/tv_salev"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:background="@drawable/rectangle_corner"
            android:gravity="center"
            android:text="@string/salev"
        />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:background="@drawable/rectangle_corner"
            android:gravity="center"
            android:text="@string/price"
        />

        <TextView
            android:id="@+id/tv_favour"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:background="@drawable/rectangle_corner"
            android:gravity="center"
            android:text="@string/favour"
        />

        <TextView
            android:id="@+id/tv_shelftime"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:background="@drawable/rectangle_corner"
            android:gravity="center"
            android:text="@string/shelftime"
        />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_newproduct"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"/>
</LinearLayout>
