<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:elevation="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

    <ImageView
        android:elevation="5dp"
        android:id="@+id/iv_item_newproduct"
        android:layout_width="80dp"
        android:layout_height="80dp"/>

    <TextView
        android:elevation="5dp"
        android:id="@+id/tv_item_newproduct_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iv_item_newproduct"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/iv_item_newproduct"
        android:text="@string/productionName"
        android:textColor="#000"
        android:textSize="18sp"
        />

    <TextView
        android:elevation="5dp"
        android:id="@+id/tv_item_newproduct_primecost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="90dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/separation"
        android:text="@string/prime_cost"
        />

    <TextView
        android:elevation="5dp"
        android:id="@+id/tv_item_nowprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_item_newproduct_name"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/iv_item_newproduct"
        android:text="$48"
        android:textColor="@color/md_red_500_color_code"
        android:textSize="24sp"/>

    <TextView
        android:elevation="5dp"
        android:id="@+id/tv_item_newproduct_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_item_nowprice"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/iv_item_newproduct"
        android:text="@string/aldcomments"
        />

    <RelativeLayout
        android:elevation="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/tv_item_newproduct_buy"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle_orange"
            android:gravity="center"
            android:text="@string/buy"
            android:textColor="#fff"/>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/tv_item_newproduct_buy"
            android:src="@drawable/arrow"/>
    </RelativeLayout>
</RelativeLayout>